--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-minimal
+title: My Personal Website
+description: >-
+  A personal website to share my work, thoughts, and resume.
+theme: minima
+plugins:
+  - jekyll-feed
+
