[Add, Ref] add publations, change layout type of frontpage

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My Personal Website
+title: Joschka Strueber
 description: >-
   A personal website to share my work, thoughts, and resume.
 theme: minima
