[Add] newest publication

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Joschka Strueber
+title: Joschka Strüber
 description: >-
   A personal website to share my work, thoughts, and resume.
 theme: minima
