[Add, Ref] change layout, add info about publications, update CV

--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,6 @@
 title: Joschka Strüber
 description: >-
   A personal website to share my work, thoughts, and resume.
-theme: minima
-minima:
-  nav_pages:
-    - blog.md
-    - papers.md
-    - cv.md
-  social_links:
-    - title: GitHub
-      icon: github
-      url: "https://github.com/the-klingspor"
-    - title: Twitter
-      icon: x-twitter
-      url: "https://x.com/JoschkaStrueber"
 plugins:
   - jekyll-feed
-
+  - jekyll-seo-tag
